[gd_scene load_steps=2 format=3 uid="uid://sv21mctoni1v"]

[ext_resource type="Script" path="res://Scenes/APIConnection.gd" id="1_67p01"]

[node name="APIControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = -17.0
offset_right = 74.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67p01")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 335.0
offset_right = 641.0
offset_bottom = 396.0
text = "Send Data To Api"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="Button" to="." method="_on_putDataOnAPI_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
